--- a/css/style.css
+++ b/css/style.css
@@ -139,13 +139,13 @@ body {
 
   h3 {
     /* font-family:cursive; */
-    line-height: .8;
+    line-height: 1.2;
 
   }
 
   h4 {
     /* font-family:cursive; */
-    line-height: .5;
+    line-height: 1;
     text-indent: 20px;
 
   }
@@ -230,3 +230,43 @@ body {
     top: 240px;
     background-color: #555
   }
+
+ /* Education achievementGallery starts here  */
+ .container {
+    display: flex;
+    width: 100%;
+    padding: 4% 2%;
+    box-sizing: border-box;
+    height: 50vh;
+  }
+  
+  .box {
+    flex: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin: 0 2%;
+    box-shadow: 0 20px 30px rgba(0,0,0,.1);
+    line-height: 0;
+  }
+  
+  .box > img {
+    width: 200%;
+    height: calc(100% - 10vh);
+    object-fit: cover; 
+    transition: .5s;
+  }
+  
+  .box > span {
+    font-size: 2vh;
+    display: block;
+    text-align: center;
+    height: 10vh;
+    line-height: 1.5;
+  }
+  
+  .box:hover { flex: 1 1 50%; }
+  .box:hover > img {
+    width: 100%;
+    height: 100%;
+  }
+ /* Education achievement gallery ends here */
