--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 body {
     background-color: #f1f1f1;
+    overflow-x: hidden;
+  }
+  * {
+    /* box-sizing: border-box; */
   }
 
   .sidebar {
@@ -50,6 +54,7 @@ body {
     margin-left: 250px;
     padding: 1px 16px;
     height: auto;
+    
   }
 
   /* On screens that are less than 700px wide, make the sidebar into a topbar */
@@ -77,30 +82,29 @@ body {
     }
   }
 
-  * {
-    /* box-sizing: border-box; */
-  }
 
-  .container {
+  .containeraboutpic {
     position: relative;
-    width: 50%;
+    width: 500px;
     max-width: 1500px;
+
   }
 
   .image {
     display: block;
     width: 100%;
     height: auto;
+    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+   
   }
 
   .overlay {
     box-sizing: border-box;
     position: absolute;
-    bottom: 0;
-    background: rgb(0, 0, 0);
+    bottom: 4px;
     background: rgba(0, 0, 0, 0.5);
     /* Black see-through */
-    color: #f1f1f1;
     width: 100%;
     transition: .5s ease;
     opacity: 0;
@@ -108,14 +112,21 @@ body {
     font-size: 20px;
     padding: 20px;
     text-align: center;
+
   }
 
-  .container:hover .overlay {
+  .containeraboutpic:hover .overlay {
     opacity: 1;
+    
   }
 
-  div.firstimage {
-    margin-top: 40px;
+  .firstimage {
+    margin-top: 90px;
+    width: 100%;
+  }
+  div.pagebackground{
+    margin-left: 40px;
+    margin-right:40px;
   }
 
   p {
@@ -128,38 +139,29 @@ body {
     line-height: 2;
   }
 
-  h1 {}
+  h1 {
+
+  }
 
   h2 {
 
-    /* font-family:cursive; */
-    line-height: 1;
-    margin-top: 60px;
   }
 
   h3 {
-    /* font-family:cursive; */
-    line-height: 1.2;
 
   }
 
   h4 {
-    /* font-family:cursive; */
-    line-height: 1;
-    text-indent: 20px;
 
   }
 
   h5 {
-    /* font-family:cursive; */
-    text-indent: 20px;
-    margin-bottom: 40px;
+
   }
 
   .button {
     border: none;
     color: white;
-
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -182,53 +184,49 @@ body {
   .button1:hover {
     background-color: white;
     color: white;
-
   }
 
-  .footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #f1f1f1;
-    color: black;
-    text-align: center;
-  }
+
 
   #mySidenav a {
     position: absolute;
-    right: -120px;
+    right: -140px;
+    width: 160px;
     transition: 0.3s;
     padding: 15px;
-    width: 120px;
     text-decoration: none;
     font-size: 20px;
     color: white;
     border-radius: 5px 0 0 5px;
     text-align: right;
+    background-color: #555;
   } 
 
   #mySidenav a:hover {
     right: 0;
-  }
+    background-color: #f1f1f1;
+    color: #555;
+    border: 2px solid #555;
+    }
 
   #gallery {
-    top: 60px;
-    background-color: #04AA6D;
+    top: 160px;
+
   }
 
   #blog {
-    top: 120px;
-    background-color: #2196F3;
+    top: 220px;
+
   }
 
   #projects {
-    top: 180px;
-    background-color: #f44336;
+    top: 280px;
+
   }
 
   #contact {
-    top: 240px;
-    background-color: #555
+    top: 340px;
+  
   }
 
  /* Education achievementGallery starts here  */
