--- a/hobbies/photographystyle.css
+++ b/hobbies/photographystyle.css
@@ -175,3 +175,38 @@ body{
     width: 100%;
   }
 }
+
+.button {
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 2px;
+  margin-top: 40px;
+  border-top-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  margin: 50;
+  width: 150px;
+  height: 50px;
+  background-color: #ffffff;
+  overflow: auto;
+}
+
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  display: block;
+  text-decoration: none;
+  font-family: sans-serif;
+}
+
+.button1:hover {
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
