--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,9 @@ body {
 
   p {
  
-    /* font-family:cursive; */
+    font-family:'Times New Roman', Times, serif;
+    font-size: large;
+
 
   }
 
