--- a/css/style.css
+++ b/css/style.css
@@ -131,14 +131,14 @@ body {
 
   p {
  
-    font-family:'Times New Roman', Times, serif;
+    font-family: serif;
     font-size: large;
 
 
   }
 
   div.pstyle {
-    line-height: 2;
+    line-height: 1.3;
   }
 
   .button {
