--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body {
     line-height: 1.3;
 }
 div.Educationdetails{
-  text-align: left;
+  text-align: justify;
   font-size:medium;
   line-height: 1.3;
 }
