--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   }
   * {
     box-sizing: border-box;
-    font-family:'Times New Roman', Times, serif;
+    font-family:Arial, Helvetica, sans-serif;
   }
 
   .sidebar {
@@ -29,15 +29,15 @@ body {
     color: black;
     padding: 16px;
     text-decoration: none;
-    font-family: sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
   }
 
   /* Active/current link */
   .sidebar a.active {
 
     color: black;
-    font-size: large;
-    font-family: sans-serif;
+    font-size: medium;
+    font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
 
   }
@@ -159,8 +159,8 @@ div.bulletpoint{
 
   p {
  
-    font-family: serif;
-    font-size: large;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:medium;
 
 
   }
