--- a/Snowman/css/style.css
+++ b/Snowman/css/style.css
@@ -2373,7 +2373,7 @@ ul {
   width: 100%;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
   top: 0;
-  background-color: #ff0000;
+  backdrop-filter:blur(8px);;
 }
 
 /* line 179, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
