Snoman Setup gamepad added

--- a/Snowman/css/style.css
+++ b/Snowman/css/style.css
@@ -6153,7 +6153,12 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+.setupbg {
+  background-image: url("../img/SETUP IMAGE/setupwallpaper.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /* line 5, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_breadcrumb.scss */
 .breadcrumb {
   position: relative;
