--- a/Snowman/css/style.css
+++ b/Snowman/css/style.css
@@ -2185,6 +2185,7 @@ ul {
   top: 0;
   width: 100%;
   z-index: 999;
+  backdrop-filter:blur(2px);
 }
 
 /* line 9, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
@@ -2247,6 +2248,7 @@ ul {
 /* line 53, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
 .main_menu .main-menu-item .nav-item a:hover:before {
   width: 67%;
+  
 }
 
 /* line 62, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
@@ -2373,7 +2375,7 @@ ul {
   width: 100%;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
   top: 0;
-  backdrop-filter:blur(8px);;
+  backdrop-filter:blur(8px);
 }
 
 /* line 179, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
@@ -2389,7 +2391,8 @@ ul {
   transform: scale(1, 0);
   display: block;
   border: 0px solid transparent;
-  background-color: #ff0000;
+  background-color: #000000;
+  
 }
 
 /* line 194, ../../01 cl html template/03_jun 2019/186_Gaiming_html/sass/_menu.scss */
@@ -2397,7 +2400,7 @@ ul {
   font-size: 14px;
   padding: 8px 20px !important;
   color: #fff !important;
-  background-color: #ff0000;
+  background-color: #000000;
   text-transform: capitalize;
 }
 
