--- a/Snowman/css/style.css
+++ b/Snowman/css/style.css
@@ -6156,6 +6156,12 @@ h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.clanbg {
+  background-image: url("../img/ClanImage/clanbg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .setupbg {
   background-image: url("../img/SETUP IMAGE/setupwallpaper.png");
   background-position: center;
