--- a/Snowman/css/playercard.css
+++ b/Snowman/css/playercard.css
@@ -2,8 +2,8 @@
   background-image: linear-gradient(to bottom right, #000000, #262A56);;
   width: 100px;
   border: 1px solid #E3CCAE;
-  margin: 10px;
-  padding: 10px;
+  margin: 5px;
+  padding: 15px;
   text-align: center;
   display: inline-block;
   border-radius: 10px;
@@ -12,10 +12,15 @@
 .acard img {
   max-width: 100%;
   border: 1px solid #B8621B;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 .acard-title {
+  margin: 5px 0;
+  color: #5272F2;
+}
+.acard-titlex {
+  font-size: x-small;
   margin: 5px 0;
   color: #5272F2;
 }
