--- a/style.css
+++ b/style.css
@@ -1,238 +1,307 @@
     img {
-  border: 5px solid #00b3ff;
-}
-body {
-  background-color: #1B1A55;
-  font-family: "Raleway", sans-serif;
-  color:#E1F7F5
-}
-b{
-    color: #ffffff;
-}
-h1{
-    font-family: "Raleway", sans-serif; color:#00b3ff
-}
+      border: 3px solid var(--boderColor);
+    }
 
-p,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif; color:#E1F7F5;
+    body {
+      background: linear-gradient(to right, #2B0933, #17021A, #000000, #030F33, #02234D, #003366);
+      font-family: "IBM Plex Mono", monospace;
+      font-size: large;
 
-}
+      color: var(--textColor);
+    }
 
-/* Timeline */
-/* The actual timeline (the vertical ruler) */
-.timeline {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-}
+    b {
+      color: var(--boldColor);
+    }
 
-/* The actual timeline (the vertical ruler) */
-.timeline::after {
-  content: '';
-  position: absolute;
-  width: 6px;
-  background-color: #E1F7F5;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  margin-left: -3px;
-}
+    h1 {
+      font-family: 'Orbitron', sans-serif;
 
-/* Container around content */
-.container {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
-}
+      color: var(--h1Color);
+    }
 
-/* The circles on the timeline */
-.container::after {
-  content: '';
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: #E1F7F5;
-  border: 4px solid #00b3ff;
-  top: 15px;
-  border-radius: 50%;
-  z-index: 1;
-}
+    a {
+      text-decoration: none;
+      color: var(--linkColor);
+      font-weight: bold;
+    }
 
-/* Place the container to the left */
-.left {
-  left: 0;
-}
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: "IBM Plex Mono", monospace;
+      color: var(--textColor);
+    }
 
-/* Place the container to the right */
-.right {
-  left: 50%;
-}
+    p {
+      font-family: "IBM Plex Mono", monospace;
+      font-size: large;
+      color: var(--textColor);
 
-/* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
+    }
 
-/* Add arrows to the right container (pointing left) */
-.right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-}
+    .highlight {
+      color: var(--highlightColor)
+    }
 
-/* Fix the circle for containers on the right side */
-.right::after {
-  left: -16px;
-}
+    /* Special Constent Text as global value */
+    .text-role {
+      color: var(--linkColor);
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-size: medium;
 
-/* The actual content */
-.content {
-  padding: 20px 30px;
-  background-color: #070F2B;
-  position: relative;
-  border-radius: 6px;
-}
+    }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-  .timeline::after {
-  left: 31px;
-  }
-  
-  /* Full-width containers */
-  .container {
-  width: 100%;
-  padding-left: 70px;
-  padding-right: 25px;
-  }
-  
-  /* Make sure that all arrows are pointing leftwards */
-  .container::before {
-  left: 60px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-  }
+    .text-footernote {
+      color: var(--linkColor);
+      font-size: 24px;
+      font-weight: bold;
+      text-align: center;
+    }
 
-  /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-  left: 15px;
-  }
-  
-  /* Make all right containers behave like the left ones */
-  .right {
-  left: 0%;
-  }
-}
+    /* Navbar */
+    #mySidebar a.w3-bar-item.w3-button:hover {
+      background-color: var(--hoverbgColor) !important;
+      color: var(--boldColor) !important;
+    }
 
-/* ------------------------------------------------------------------------------------------------------------- */
-/* Gallery Starts Here */
-div.gallery {
-  border: 1px solid #ccc;
-}
+    .w3-bar-item.active {
+      background-color: var(--hoverbgColor) !important;
+      color: var(--boldColor) !important;
+    }
 
-div.gallery:hover {
-  border: 1px solid #00b3ff;
-}
+    /* Timeline */
+    /* The actual timeline (the vertical ruler) */
+    .timeline {
+      position: relative;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
 
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
+    /* The actual timeline (the vertical ruler) */
+    .timeline::after {
+      content: '';
+      position: absolute;
+      width: 6px;
+      background-color: var(--linkColor);
+      top: 0;
+      bottom: 0;
+      left: 50%;
+      margin-left: -3px;
+    }
 
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
+    /* Container around content */
+    .container {
+      padding: 10px 40px;
+      position: relative;
+      background-color: inherit;
+      width: 50%;
+    }
 
-* {
-  box-sizing: border-box;
-}
+    /* The circles on the timeline */
+    .container::after {
+      content: '';
+      position: absolute;
+      width: 25px;
+      height: 25px;
+      right: -17px;
+      background-color: var(--linkColor);
+      border: 4px solid var(--boderColor);
+      top: 15px;
+      border-radius: 50%;
+      z-index: 1;
+    }
 
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
+    /* Place the container to the left */
+    .left {
+      left: 0;
+    }
 
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
+    /* Place the container to the right */
+    .right {
+      left: 50%;
+    }
 
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
-}
+    /* Add arrows to the left container (pointing right) */
+    .left::before {
+      content: " ";
+      height: 0;
+      position: absolute;
+      top: 22px;
+      width: 0;
+      z-index: 1;
+      right: 30px;
+      border: medium solid var(--boderColor);
+      border-width: 10px 0 10px 10px;
+      border-color: transparent transparent transparent var(--boderColor);
+      ;
+    }
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+    /* Add arrows to the right container (pointing left) */
+    .right::before {
+      content: " ";
+      height: 0;
+      position: absolute;
+      top: 22px;
+      width: 0;
+      z-index: 1;
+      left: 30px;
+      border: medium solid var(--boderColor);
+      border-width: 10px 10px 10px 0;
+      border-color: transparent var(--boderColor) transparent transparent;
+    }
 
+    /* Fix the circle for containers on the right side */
+    .right::after {
+      left: -16px;
+    }
 
-        .conference {
-            background-color: #cbc9f1;
-            border-left: 6px solid #9290C3;
-            margin-top: 5px;
-            padding: 1px 20px;
-            color: #1B1A55;
-        }
-        /* =============================================================================== */
-        /* Card */
-        /* Float four columns side by side */
-.column {
-  float: left;
-  width: 10%;
-  padding: 0 10px;
-}
+    /* The actual content */
+    .content {
+      padding: 20px 30px;
+      background-color: var(--backgroundColor1);
+      position: relative;
+      border-radius: 6px;
+    }
 
-/* Remove extra left and right margins, due to padding */
-.row {margin: 0 -5px;}
+    /* Media queries - Responsive timeline on screens less than 600px wide */
+    @media screen and (max-width: 600px) {
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+      /* Place the timelime to the left */
+      .timeline::after {
+        left: 31px;
+      }
 
-/* Responsive columns */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
+      /* Full-width containers */
+      .container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+      }
 
-/* Style the counter cards */
-.card {
-  box-shadow: 0 4px 8px 0 #00b3ff;
-  padding: 16px;
-  text-align: center;
-  background-color: #070F2B;
-}
+      /* Make sure that all arrows are pointing leftwards */
+      .container::before {
+        left: 60px;
+        border: medium solid var(--boderColor);
+        border-width: 10px 10px 10px 0;
+        border-color: transparent var(--boderColor) transparent transparent;
+      }
 
+      /* Make sure all circles are at the same spot */
+      .left::after,
+      .right::after {
+        left: 15px;
+      }
+
+      /* Make all right containers behave like the left ones */
+      .right {
+        left: 0%;
+      }
+    }
+
+    /* ------------------------------------------------------------------------------------------------------------- */
+    /* Gallery Starts Here */
+    div.gallery {
+      border: 0px solid var(--boderColor);
+    }
+
+    div.gallery:hover {
+      border: 0px solid var(--boderColor);
+    }
+
+    div.gallery img {
+      width: 100%;
+      height: auto;
+    }
+
+    div.desc {
+      padding: 15px;
+      text-align: center;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    .responsive {
+      padding: 0 6px;
+      float: left;
+      width: 24.99999%;
+    }
+
+    @media only screen and (max-width: 700px) {
+      .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+      }
+    }
+
+    @media only screen and (max-width: 500px) {
+      .responsive {
+        width: 100%;
+      }
+    }
+
+    .clearfix:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+
+    /* Label banner  */
+    .conference {
+      background-color: var(--hoverbgColor);
+      border-left: 6px solid var(--boderColor);
+      margin-top: 5px;
+      padding: 1px 20px;
+      /* color: #00f7ff; */
+    }
+
+    /* =============================================================================== */
+    /* Card */
+    /* Float four columns side by side */
+    .column {
+      float: left;
+      width: 10%;
+      padding: 0 10px;
+    }
+
+    /* Remove extra left and right margins, due to padding */
+    .row {
+      margin: 0 -5px;
+    }
+
+    /* Clear floats after the columns */
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+
+    /* Responsive columns */
+    @media screen and (max-width: 600px) {
+      .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+      }
+    }
+
+    /* Style the counter cards */
+    .card {
+      box-shadow: 0 4px 8px 0 var(--boderColor);
+      padding: 16px;
+      text-align: center;
+      background-color: var(--backgroundColor1);
+    }
+
+    /* Experience image vertically centering */
+    .w3-quarter {
+      display: flex;
+      justify-content: center;
+      /* Centers horizontally */
+      align-items: center;
+      /* Centers vertically */
+    }
